--- a/Table.html
+++ b/Table.html
@@ -24,7 +24,7 @@
             <td>50</td>
             <td>54</td>
             <td>104</td>
-        </tr>
+        </tr>table
         <tr>
             <td>2</td>
             <td>XYZ</td>
